--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsforce": "^1.11.1",
     "langchain": "^0.0.72",
     "redis": "^4.6.6",
+    "scrape-twitter": "^0.11.1",
     "uuid": "^9.0.0"
   }
 }
